--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -45,7 +45,7 @@
   <div id="variable-modal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>🆕 Criar Nova Variável</h2>
+      <h2>🚀 Criar Nova Variável</h2>
       <div class="modal-body">
         <label for="variable-name">Nome da variável:</label>
         <input type="text" id="variable-name" placeholder="Digite o nome da variável..." maxlength="50">
@@ -83,7 +83,7 @@
     <category name="Variáveis" colour="#00cfe5">
       <button text="➕ Criar Nova Variável" callbackKey="CREATE_VARIABLE"></button>
     </category>
-    <category name="Declarações" colour="#00cfe5">
+    <category name="Listas" colour="#00cfe5">
       <block type="variable_declaration">
         <value name="VALUE">
           <shadow type="math_number"><field name="NUM">0</field></shadow>
@@ -94,10 +94,16 @@
       <block type="procedures_defnoreturn"></block>
       <block type="procedures_callnoreturn"></block>
     </category>
-    <category name="Controle" colour="#0c0931">
-      <block type="delay_block"></block>
-      <block type="digital_write"></block>
-      <block type="digital_read"></block>
+    <category name="Sensores" colour="#0c0931">
+      <category name="Medidas Inerciais" colour="#2e2e8a">
+        <block type="mpu6050_read"></block>
+      </category>
+      <category name="Ultrasond" colour="#2e8a5c">
+        <block type="ultrasond"></block>
+      </category>
+      <category name="Pressão" colour="#8a2e2e">
+        <block type="pressao"></block>
+      </category>
     </category>
   </xml>
 
