--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -112,7 +112,11 @@
         <block type="ultrasound"></block>
       </category>
       <category name="Pressão" colour="#8a2e2e">
-        <block type="pressao"></block>
+        <block type="bmp180_init"></block>
+        <sep></sep>
+        <block type="bmp180_temperature"></block>
+        <block type="bmp180_pressure"></block>
+        <block type="bmp180_altitude"></block>
       </category>
     </category>
   </xml>
