--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -94,6 +94,15 @@
       <block type="procedures_defnoreturn"></block>
       <block type="procedures_callnoreturn"></block>
     </category>
+    <category name="Bibliotecas" colour="#3c3c3c">
+      <block type="library_arduino_basic"></block>
+      <sep></sep>
+      <block type="library_wire"></block>
+      <sep></sep>
+      <block type="library_bmp180"></block>
+      <block type="library_mpu6050"></block>
+      <block type="library_dht"></block>
+    </category>
     <category name="Sensores" colour="#0c0931">
       <category name="Medidas Inerciais" colour="#2e2e8a">
         <block type="mpu6050_init"></block>
@@ -117,6 +126,12 @@
         <block type="bmp180_temperature"></block>
         <block type="bmp180_pressure"></block>
         <block type="bmp180_altitude"></block>
+      </category>
+      <category name="Temperatura e Umidade" colour="#2e8a2e">
+        <block type="dht_init"></block>
+        <sep></sep>
+        <block type="dht_temperature"></block>
+        <block type="dht_humidity"></block>
       </category>
     </category>
   </xml>
