--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -65,6 +65,11 @@
       <block type="logic_boolean"></block>
     </category>
     <category name="Loops" colour="#00cfe5">
+      <block type="arduino_setup"></block>
+      <block type="arduino_loop"></block>
+      <sep></sep>
+      <block type="arduino_serial_begin"></block>
+      <sep></sep>
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <shadow type="math_number"><field name="NUM">10</field></shadow>
