Alteração no AdaFruit

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -104,6 +104,7 @@
       <sep></sep>
       <block type="library_wire"></block>
       <sep></sep>
+      <block type="library_adafruit"></block>
       <block type="library_bmp180"></block>
       <block type="library_mpu6050"></block>
       <block type="library_dht"></block>
