--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -69,6 +69,7 @@
       <block type="arduino_loop"></block>
       <sep></sep>
       <block type="arduino_serial_begin"></block>
+      <block type="serial_not"></block>
       <sep></sep>
       <block type="controls_repeat_ext">
         <value name="TIMES">
@@ -112,6 +113,7 @@
       <block type="library_wire"></block>
       <sep></sep>
       <block type="library_adafruit"></block>
+      <block type="library_sensor"></block>
       <block type="library_bmp180"></block>
       <block type="library_mpu6050"></block>
       <block type="library_dht"></block>
@@ -129,6 +131,8 @@
         <block type="mpu6050_gyro_z"></block>
         <sep></sep>
         <block type="mpu6050_read"></block>
+        <sep></sep>
+        <block type="mpu6050_not"></block>
       </category>
       <category name="BMP180" colour="#8a2e2e">
         <block type="bmp180_init"></block>
