--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -127,6 +127,9 @@
         <block type="mpu6050_set_gyro_range"></block>
         <block type="mpu6050_set_filter_bandwidth"></block>
         <sep></sep>
+        <block type="mpu6050_sensors_event"></block>
+        <block type="mpu6050_get_event"></block>
+        <sep></sep>
         <block type="mpu6050_accel_x"></block>
         <block type="mpu6050_accel_y"></block>
         <block type="mpu6050_accel_z"></block>
